# luanshen

./: .env.example  .gitignore  AGENTS.md  BATCH_FILES.md  DEPLOYMENT.md  QUICKSTART.md  add_elastic_modulus.sql  add_tool_columns.sql  cleanup.bat  cleanup.ps1  deploy.bat  deploy.ps1  docker-compose.yml  fix_parameters.sql  init-data.ps1  init.bat  logs.bat  logs.ps1  pyproject.toml  status.bat  status.ps1  stop.bat  stop.ps1  test.sql  test_cut_depth_fix.py  test_optimization.py  一键部署.bat  停止服务.bat  初始化数据.bat  查看状态.bat  需求规格说明书.md
docs/architecture/: 阶段一实施计划.md
docs/deployment/: NC设备快速配置指南.md  NC设备连接配置完成总结.md  NC设备连接配置指南.md
frontend/: Dockerfile  PDF导出功能说明.md  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/pages/: DeviceMonitorPage.tsx  DigitalTwinPage.tsx  EnergyAnalysisPage.tsx  FixturesPage.tsx  HistoryPage.tsx  KnowledgePage.tsx  MachinesPage.tsx  MaterialsPage.tsx  NCSimulationPage.tsx  OptimizationPage.tsx  QualityPage.tsx  ReportsPage.tsx  StrategiesPage.tsx  ToolLifePage.tsx  ToolsPage.tsx  WorkshopPage.tsx
frontend/src/services/: alarmService.ts  api.ts  deviceMonitorService.ts  machineService.ts  materialService.ts  optimizationService.ts  pdfService.ts  strategyService.ts  toolService.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
infrastructure/docker/: Dockerfile
services/alarm-management/: .env.example  Dockerfile  requirements.txt  run.py
services/alarm-management/src/: __init__.py  main.py
services/device-monitor/: .env.example  Dockerfile  README.md  requirements.txt  run.py  test_opcua_connection.py
services/device-monitor/sql/: .gitignore
services/parameter-optimization/: DEEPSEEK_INTEGRATION.md  README.md  requirements.txt  run.py  test_deepseek.py
services/quality-trace/: .env.example  .gitignore  Dockerfile  requirements.txt  run.py
(+92 files in other folders)
